copies added main page

--- a/index.html
+++ b/index.html
@@ -72,33 +72,25 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/web-development.png" alt="">
             <h2>Web Development</h2>
-            <p>
-            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-            </p>
+            <p> Web Development solutions based on cutting edge technology & best practices. </p>
             <a href="web-development.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/web-design.png" alt="">
             <h2>Web Design</h2>
-            <p>
-            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-            </p>
+            <p> Websites that enhance your online presence and truly represent your business. </p>
             <a href="web-design.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/graphic-design.png" alt="">
             <h2>Graphic Design</h2>
-            <p>
-            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-            </p>
+            <p> Graphic Design tailored to your brand’s culture core values and distinction. </p>
             <a href="graphic-design.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/digital-marketing.png" alt="">
             <h2>Digital Marketing</h2>
-            <p>
-            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-            </p>
+            <p> Digital marketing strategies and SEO services that help drive traffic to your website. </p>
             <a href="digital-marketing.html">Learn more</a>
           </div>
         </div>
@@ -151,9 +143,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-12">
-            <h2>Get a professional website at an affordable price.</h2>
+            <h2>Uncover better experiences for your customers for a price you can afford.</h2>
             <p>
-            Adipisicing quos magnam sint quod officiis Cum perspiciatis magnam soluta inventore corrupti? Inventore ratione qui molestias vel voluptatem Vel inventore.
+            We partner with brands like yours to create websites your customers will remember
+            Request a free quote and we will analyze your requirements and respond in just an hour.
             </p>
           </div>
           <div class="text-center col-md-4 col-sm-12">
@@ -171,47 +164,27 @@
           <div class="col-md-12">
             <div class="sl-cont">
               <div class="owl-carousel owl-tes owl-theme">
+
                 <div> 
                   <p class="te-txt">
-                  1 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  “Best web design company in Ireland. Affordable pricing and the turn around time is very quick. Highly recommended.”
                   </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
+                  <span class="te-auth">David Murphy</span>
+                  <span class="te-func">Dublin</span>
                 </div>
                 <div> 
                   <p class="te-txt">
-                  2 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  “We want to thank you for all of your help! You made it possible for us to launch our project in the time frame that we set, chose the perfect logo, and made it financially possible. Mostly we really appreciate the support you all gave us during our website day and beyond.”
                   </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
+                  <span class="te-auth">Antonio Gala</span>
+                  <span class="te-func">Madrid</span>
                 </div>
                 <div> 
                   <p class="te-txt">
-                  3 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  "We considered web design agencies from giant web development companies to some very small operations. Reachpeak stood above them all."
                   </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
-                </div>
-                <div> 
-                  <p class="te-txt">
-                  4 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
-                  </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
-                </div>
-                <div> 
-                  <p class="te-txt">
-                  5 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
-                  </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
-                </div>
-                <div> 
-                  <p class="te-txt">
-                  6 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
-                  </p>
-                  <span class="te-auth">jane doe</span>
-                  <span class="te-func">manager cork</span>
+                  <span class="te-auth">Jan Wacek</span>
+                  <span class="te-func">Warsaw</span>
                 </div>
               </div>
             </div>
@@ -224,10 +197,25 @@
     <section class="sec-five">
       <div class="container">
         <div class="row">
-          <h2 class="text-center">Website Design in Irealand..</h2>
+          <h2 class="text-center">Website Design Irealand</h2>
           <div class="col-md-12">
             <p class="text-center">
-            Lorem nostrum beatae a perferendis laboriosam! Vitae at voluptatibus dolor amet quibusdam ut Cumque consequuntur impedit ea nihil facere Molestias quisquam ipsa cupiditate excepturi fugiat Itaque veritatis error vel repudiandae nihil Unde dolore distinctio laboriosam tempora fuga Explicabo vitae delectus libero temporibus animi? Atque optio quidem ducimus libero ab Deleniti ratione impedit dignissimos neque libero Possimus eos reprehenderit fugit eos aliquam Optio consectetur adipisci at tempore deleniti. Repellat quidem rerum ducimus dignissimos sunt tenetur ullam tenetur. Consequuntur nostrum assumenda ipsum dicta ex deserunt! Nisi libero pariatur possimus consequatur adipisci quisquam Recusandae ut ipsa natus sed esse Accusantium dolorum corporis architecto?
+            Reachpeak offers custom Web Development, Customized 
+            Content Management Systems, Digital Marketing, 
+            custom Web Design and Graphics Design to 
+            help our clients thrive. Our team 
+            of designers, web developers, and 
+            digital marketers specialize in web programming, 
+            branding, and app development. We 
+            tailor our interactive services to meet client 
+            priorities and we approach each project with 
+            integrity, a positive attitude and commitment 
+            to satisfaction. Our experience and proven 
+            track record of satisfied customers tell you 
+            what can you expect when you work 
+            with Reachpeak team. Passion, talent,
+            efficiency and personal attention. The perfect 
+            blend of strategy, creativity and technology.
             </p>
           </div>
         </div>
