--- a/web-development.html
+++ b/web-development.html
@@ -67,9 +67,9 @@
     <section class="container web-des-sec-one hidden-xs">
       <div class="row cl-ac">
         <div class="col-sm-8 col-md-9 ">
-          <h2>Get a professional website at an affordable price.</h2>
+          <h2>Are you Looking beyond the "Brochure Website”?</h2>
           <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          We develop engaging Web sites that are visually striking, easy-to-navigate, and dead-simple to maintain. Our web development solutions are based on cutting edge technology & best practices.
           </p>
         </div>
         <div class="col-sm-4 col-md-3 ">
