--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </head>
   <body>
     <!-- NAVBAR --> 
-    <nav class="navbar navbar-default">
+
+    <nav id="header" class="navbar navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -315,9 +316,78 @@
           }
         });
 
+        var myNavBar = {
 
+          flagAdd: true,
+
+          elements: [],
+
+          init: function (elements) {
+            this.elements = elements;
+          },
+
+          add : function() {
+            if(this.flagAdd) {
+              for(var i=0; i < this.elements.length; i++) {
+                document.getElementById(this.elements[i]).className += " fixed-theme";
+              }
+              this.flagAdd = false;
+            }
+          },
+
+          remove: function() {
+            for(var i=0; i < this.elements.length; i++) {
+              document.getElementById(this.elements[i]).className =
+                document.getElementById(this.elements[i]).className.replace( /(?:^|\s)fixed-theme(?!\S)/g , '' );
+            }
+            this.flagAdd = true;
+          }
+
+        };
+
+        /**
+         * Init the object. Pass the object the array of elements
+         * that we want to change when the scroll goes down
+         */
+        myNavBar.init(  [
+          "header",
+          "header-container",
+          "brand"
+        ]);
+
+        /**
+         * Function that manage the direction
+         * of the scroll
+         */
+        function offSetManager(){
+
+          var yOffset = 0;
+          var currYOffSet = window.pageYOffset;
+
+          if(yOffset < currYOffSet) {
+            myNavBar.add();
+          }
+          else if(currYOffSet == yOffset){
+            myNavBar.remove();
+          }
+
+        }
+
+        /**
+         * bind to the document scroll detection
+         */
+        window.onscroll = function(e) {
+          offSetManager();
+        }
+
+        /**
+         * We have to do a first detectation of offset because the page
+         * could be load with scroll down set.
+         */
+        offSetManager();
 
       });
+
     </script>
   </body>
 </html>
