--- a/web-development.html
+++ b/web-development.html
@@ -81,16 +81,64 @@
     <section class="container web-des-sec-two">
       <div class="row">
         <div class="col-sm-8 col-md-9">
+          <div class="row">
+            <div>
+              Reachpeak web design agency create ecommerce platforms, web applications, custom content management systems and everything in between. We’ll guide you through every step of the process, from strategy to coding to marketing and launch.
+            </div>
+          </div>
           <div>
-            Reachpeak web design agency create ecommerce platforms, web applications, custom content management systems and everything in between. We’ll guide you through every step of the process, from strategy to coding to marketing and launch.
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Ecommerce Solutions</h2>
+                <p>
+                Our ecommerce solutions are aimed at speeding up on line transactions through your website and offering user friendly online shopping solutions. We use the best ecommerce tools for web development in Ireland. Our e-commerce experts are able to connect your site to major e-commerce platforms, like WooCommerce, Shopify, Prestashop and Spree.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Content Management Systems</h2>
+                <p>
+                Reachpeak empowers our clients to control their message by developing a CMS that is robust enough for their business needs yet intuitive and easy enough to use. From basic content management systems like WordPress and Drupal to customized enterprise systems, our knowledgeable staff can develop & integrate CMS solutions to meet and exceed your business requirements.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Customer Relations Management</h2>
+                <p>
+                The better a business can manage the relationships it has with its customers the more successful it will become. Successful CRM relies on the use of technology. Our solutions will help you to manage customers, finances, stock and staff. Whether you sell cars or you run recruitment agency Reachpeak will develop CRM tailored to your business needs.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Professional Blog Design</h2>
+                <p>
+                Building a professional blog is more than just installing the latest plugin in your favorite 3rd party software. It’s about analyzing your message, delivering fresh and unique content, engaging your audience and tying it all together in an energetic and          beautifully rich design and functionality. We’ve got all covered.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
           <div class="row">
             <div class="col-sm-8 col-md-9">
-              <h2>Get a professional website at an affordable price.</h2>
+              <h2>Are you Looking beyond the "Brochure Website”?</h2>
               <p>
-              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+              We develop engaging Web sites that are visually striking, easy-to-navigate, and dead-simple to maintain. Our web development solutions are based on cutting edge technology & best practices.
               </p>
             </div>
             <div class="col-sm-4 col-md-3">
