--- a/web-development.html
+++ b/web-development.html
@@ -132,6 +132,15 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <h2 class='text-center'>Web Development Ireland</h2>
+              <p>
+              Websites and web applications could become some of the most accessed touchpoints for a brand.
+              We build interactive experiences and tools to make such touchpoints come to life and engage your prospectus.  Most of our work with clients involves building websites and web applications using open source software and coding frameworks. Using open source frameworks helps to speed  up the web development process, increase quality and improve security.
+              </p>
+            </div>
+          </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
           <div class="row">
@@ -196,6 +205,7 @@
           </div>
         </div>
       </div>
+
     </section>
     <!-- FOOTER --> 
     <footer>
