web-dev cp sec2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
     <!-- NAVBAR --> 
-
-    <nav id="header" class="navbar navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -30,7 +29,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a> -->
           <a class="hidden-xs navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a>
           <a class="visible-xs navbar-brand" href="index.html"><img src="images/logo-sm.jpg" alt="reachpeak logo"></a>
         </div>
@@ -43,18 +41,18 @@
             </ul>
           </div>
           <div class="navbar-wrp">
-            <ul id="navbar-soc" class="hidden-xs  nav navbar-nav navbar-right">
+            <ul id="navbar-soc" class=" hidden-xs nav navbar-nav navbar-right">
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-instagram"></i></a></li>
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li><a href="web-development.html">Web Development</a></li>
+              <li><a href="web-development.html">Web Development<span class="sr-only">(current)</span></a></li>
               <li><a href="web-design.html">Web Design</a></li>
               <li><a href="graphic-design.html">Graphic Design</a></li>
               <li><a href="digital-marketing.html">Digital Marketing</a></li>
-              <li><a href="port.html">Portfolio</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
