web-dev cp sec2

--- a/web-development.html
+++ b/web-development.html
@@ -160,6 +160,25 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <h2>How we work</h2>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <img src="images/web-development.png" alt="">
+            <p> Web Development solutions based on cutting edge technology & best practices. </p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <img src="images/web-design.png" alt="">
+            <p> Websites that enhance your online presence and truly represent your business. </p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <img src="images/graphic-design.png" alt="">
+            <p> Graphic Design tailored to your brand’s culture core values and distinction. </p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <img src="images/digital-marketing.png" alt="">
+            <p> Digital marketing strategies and SEO services that help drive traffic to your website. </p>
+          </div>
+        </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
           <div class="row">
