--- a/web-design.html
+++ b/web-design.html
@@ -66,9 +66,9 @@
     <section class="container web-des-sec-one hidden-xs">
       <div class="row cl-ac">
         <div class="col-sm-8 col-md-9 ">
-          <h2>Get a professional website at an affordable price.</h2>
+          <h2>You only get one first impression</h2>
           <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          Our web design services will ensure that visitors see your best side. Our Irish Design Agency offer services that enhance your online presence and make your website will truly represent your business.
           </p>
         </div>
         <div class="col-sm-4 col-md-3 ">
@@ -80,16 +80,69 @@
     <section class="container web-des-sec-two">
       <div class="row">
         <div class="col-sm-8 col-md-9">
-          <div>
-            Lorem earum delectus deserunt dignissimos minus Debitis beatae adipisci temporibus deserunt eveniet In iste ab quis quos quisquam Aliquid consectetur similique corrupti quasi incidunt? Quasi voluptates sit error expedita quos Laboriosam ratione blanditiis quis architecto dignissimos sapiente eos quia dignissimos magnam. Possimus corrupti doloribus aut nostrum illo. Incidunt non vero ut quasi earum! Sapiente aliquam facilis debitis praesentium eius, minima Sit minus ab tenetur omnis expedita. Aliquid sequi temporibus commodi et ipsa laboriosam optio et accusamus. Maxime tempora tempore ut in quaerat Velit cupiditate officiis eaque ipsam quia Voluptatem voluptates aliquid itaque natus odit. Commodi repellat animi cum repellendus optio Molestias fugit expedita quisquam unde fugiat. Magnam aperiam eum illo amet deleniti accusantium. At dicta sequi incidunt fuga ea temporibus Voluptatem dignissimos molestiae nulla beatae ullam dolores, commodi inventore. Accusantium suscipit asperiores autem soluta distinctio. Quam provident at officiis veritatis magni quam Assumenda labore fugiat rerum itaque voluptatem. Consequatur temporibus repellendus maxime consequatur totam atque. Quia totam doloremque quis maiores a magnam. Cumque ipsam optio blanditiis veniam magni. Accusantium enim veniam elit autem libero Dignissimos saepe aut voluptas quos officiis Corrupti dignissimos recusandae ducimus molestias hic nam Quasi natus numquam veritatis quae dolore Magni ut blanditiis dolores vel facere distinctio nostrum, quisquam Commodi ad doloremque deserunt minima hic. Error amet voluptatibus consequatur cumque veritatis corrupti, excepturi. Esse ipsa iusto minus nam rerum commodi? Eligendi laudantium soluta libero quo ut sed? Ratione maiores animi nihil voluptatibus blanditiis itaque, voluptas quaerat! Sed dolore molestias doloremque natus corporis. Sunt odit laudantium quia voluptas ut? Doloribus modi nihil similique consequuntur dignissimos! Provident sint voluptatum eaque nulla eligendi quis optio nobis recusandae Impedit provident libero labore neque consectetur officiis? Ipsum dicta inventore accusamus nihil asperiores! Suscipit velit labore voluptas delectus saepe animi quibusdam facere optio Eos sequi laudantium quidem quod cumque. Perferendis non nostrum sit
+          <div class="row">
+            <div>
+              Our web design services will greatly enhance your business’s presence on the Internet. Our design process is based on three main pillars 
+            </div>
           </div>
+          <div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Content Based Design</h2>
+                <p>
+                Whether you are developing a brochure web site, an in-depth e-ecommerce website – Reachpeak can design a great user experience with a clean content hierarchy. We focus on both the organization of your content and how your users will interact with it.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Responsive Web Design</h2>
+                <p>
+                Responsive web design (RWD) is a web design approach aimed at designing websites to provide an optimal viewing experience. Our agency standard is designing websites that are easy to read and navigate across a wide range of devices from desktop computer monitors to mobile phones and  tablets.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>SEO Factors</h2>
+                <p>
+Building an effective business website nowadays involves much more than “only” graphic design and coding. For example, maximizing a website’s search engine optimization (SEO) and/or “pay per click” functionality is a profession unto itself—and we have experts on staff who deal only with that.
+                </p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="row">
+            <h2>How we work</h2>
+            <p>
+            Our creative process involves you and your team every step of the way, ensuring that your new site is something that truly fits to your needs and pushing you to the next level.
+            </p>
+            <div class="col-md-4"> 
+            <img src="images/web-development.png" alt="">
+          </div>
+            <div class="col-md-4"> 
+            <img src="images/web-design.png" alt="">
+          </div>
+            <div class="col-md-4"> 
+            <img src="images/graphic-design.png" alt="">
+          </div>
+        </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
           <div class="row">
             <div class="col-sm-8 col-md-9">
-              <h2>Get a professional website at an affordable price.</h2>
+              <h2>You only get one first impression</h2>
               <p>
-              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+              Our web design services will ensure that visitors see your best side. Our Irish Design Agency offer services that enhance your online presence and make your website will truly represent your business.
               </p>
             </div>
             <div class="col-sm-4 col-md-3">
