--- a/graphic-design.html
+++ b/graphic-design.html
@@ -67,9 +67,9 @@
     <section class="container web-des-sec-one hidden-xs">
       <div class="row cl-ac">
         <div class="col-sm-8 col-md-9 ">
-          <h2>Get a professional website at an affordable price.</h2>
+          <h2></h2>
           <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          Reachpeak as a graphic design agency will work with you to establish your business guidelines: image, color schemes, logos, brand identities, slogans, and websites - to ensure   the delivery of a consistent message to your customers.
           </p>
         </div>
         <div class="col-sm-4 col-md-3 ">
@@ -82,7 +82,59 @@
       <div class="row">
         <div class="col-sm-8 col-md-9">
           <div>
-            Lorem earum delectus deserunt dignissimos minus Debitis beatae adipisci temporibus deserunt eveniet In iste ab quis quos quisquam Aliquid consectetur similique corrupti quasi incidunt? Quasi voluptates sit error expedita quos Laboriosam ratione blanditiis quis architecto dignissimos sapiente eos quia dignissimos magnam. Possimus corrupti doloribus aut nostrum illo. Incidunt non vero ut quasi earum! Sapiente aliquam facilis debitis praesentium eius, minima Sit minus ab tenetur omnis expedita. Aliquid sequi temporibus commodi et ipsa laboriosam optio et accusamus. Maxime tempora tempore ut in quaerat Velit cupiditate officiis eaque ipsam quia Voluptatem voluptates aliquid itaque natus odit. Commodi repellat animi cum repellendus optio Molestias fugit expedita quisquam unde fugiat. Magnam aperiam eum illo amet deleniti accusantium. At dicta sequi incidunt fuga ea temporibus Voluptatem dignissimos molestiae nulla beatae ullam dolores, commodi inventore. Accusantium suscipit asperiores autem soluta distinctio. Quam provident at officiis veritatis magni quam Assumenda labore fugiat rerum itaque voluptatem. Consequatur temporibus repellendus maxime consequatur totam atque. Quia totam doloremque quis maiores a magnam. Cumque ipsam optio blanditiis veniam magni. Accusantium enim veniam elit autem libero Dignissimos saepe aut voluptas quos officiis Corrupti dignissimos recusandae ducimus molestias hic nam Quasi natus numquam veritatis quae dolore Magni ut blanditiis dolores vel facere distinctio nostrum, quisquam Commodi ad doloremque deserunt minima hic. Error amet voluptatibus consequatur cumque veritatis corrupti, excepturi. Esse ipsa iusto minus nam rerum commodi? Eligendi laudantium soluta libero quo ut sed? Ratione maiores animi nihil voluptatibus blanditiis itaque, voluptas quaerat! Sed dolore molestias doloremque natus corporis. Sunt odit laudantium quia voluptas ut? Doloribus modi nihil similique consequuntur dignissimos! Provident sint voluptatum eaque nulla eligendi quis optio nobis recusandae Impedit provident libero labore neque consectetur officiis? Ipsum dicta inventore accusamus nihil asperiores! Suscipit velit labore voluptas delectus saepe animi quibusdam facere optio Eos sequi laudantium quidem quod cumque. Perferendis non nostrum sit
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Logo Design</h2>
+                <p>
+                Need a logo design for your business? Reachpeak can help you create a logo that portrays the image of your company. We can then incorporate that logo into your new web site design.  We create the logos at print quality resolution, then create several, low resolution, web versions of your logo.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Graphic Design for Print</h2>
+                <p>
+                Whether you require a catalog or a 1 color business card, we work with you to design a piece that meets your needs and exceeds your expectations. From custom print design and photography to copywriting and production, Reachpeak can manage your project from conception to delivery.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Infographic Design</h2>
+                <p>
+                Infographics is a great way to illustrate some facts and point people to a product or service. The data in the infographic shows that you know the topic well. 
+                Information is displayed in a easy to digest way. Our experienced illustrators can help you create and distribute your infographic. Obtaining proper links from other infographic websites helps your website rank better on search engines and sets your authority in your industry. 
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Visual Identity</h2>
+                <p>
+                Your visual brand identity is how you stand apart from your competitors. It influences how consumers perceive your brand. At Reachpeak, we help you identify who you are and who you want to appeal to. We’ll help you choose a color palette using color psychology; select your typography, and design a unique logo (or refresh your current one).
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <h2>Graphic Design Ireland</h2>
+              <p>
+              Reachpeak offers custom print design, brand identity, logo design, graphic design, web design to help our clients thrive. Our team of graphic designers and illustrators will bring your ideas to life with integrity, a positive attitude and commitment to satisfaction. What can you expect when you work with Reachpeak team is passion, talent, efficiency and personal attention. The perfect blend of strategy, creativity and technology.
+              </p>
+            </div>
           </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
@@ -90,7 +142,7 @@
             <div class="col-sm-8 col-md-9">
               <h2>Get a professional website at an affordable price.</h2>
               <p>
-              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+              Reachpeak as a graphic design agency will work with you to establish your business guidelines: image, color schemes, logos, brand identities, slogans, and websites - to ensure   the delivery of a consistent message to your customers.
               </p>
             </div>
             <div class="col-sm-4 col-md-3">
