--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -67,9 +67,9 @@
     <section class="container web-des-sec-one hidden-xs">
       <div class="row cl-ac">
         <div class="col-sm-8 col-md-9 ">
-          <h2>Get a professional website at an affordable price.</h2>
+          <h2>Be Visible! Get More Website Traffic!</h2>
           <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          Just because you have new website doesn’t mean that anyone will notice it. You have to promote it. The best and prettiest website in the world is essentially useless if people cannot find it.  Only versatile digital marketing strategy will allows you to capture, engage and convert your target audience in real-time. 
           </p>
         </div>
         <div class="col-sm-4 col-md-3 ">
@@ -81,16 +81,54 @@
     <section class="container web-des-sec-two">
       <div class="row">
         <div class="col-sm-8 col-md-9">
+          <div class="row">
+            <div>
+              We take a comprehensive digital approach to marketing that starts with research and planning and continues with on-going optimizations and insights to maximize your earnings. 
+
+            </div>
+          </div>
           <div>
-            Lorem earum delectus deserunt dignissimos minus Debitis beatae adipisci temporibus deserunt eveniet In iste ab quis quos quisquam Aliquid consectetur similique corrupti quasi incidunt? Quasi voluptates sit error expedita quos Laboriosam ratione blanditiis quis architecto dignissimos sapiente eos quia dignissimos magnam. Possimus corrupti doloribus aut nostrum illo. Incidunt non vero ut quasi earum! Sapiente aliquam facilis debitis praesentium eius, minima Sit minus ab tenetur omnis expedita. Aliquid sequi temporibus commodi et ipsa laboriosam optio et accusamus. Maxime tempora tempore ut in quaerat Velit cupiditate officiis eaque ipsam quia Voluptatem voluptates aliquid itaque natus odit. Commodi repellat animi cum repellendus optio Molestias fugit expedita quisquam unde fugiat. Magnam aperiam eum illo amet deleniti accusantium. At dicta sequi incidunt fuga ea temporibus Voluptatem dignissimos molestiae nulla beatae ullam dolores, commodi inventore. Accusantium suscipit asperiores autem soluta distinctio. Quam provident at officiis veritatis magni quam Assumenda labore fugiat rerum itaque voluptatem. Consequatur temporibus repellendus maxime consequatur totam atque. Quia totam doloremque quis maiores a magnam. Cumque ipsam optio blanditiis veniam magni. Accusantium enim veniam elit autem libero Dignissimos saepe aut voluptas quos officiis Corrupti dignissimos recusandae ducimus molestias hic nam Quasi natus numquam veritatis quae dolore Magni ut blanditiis dolores vel facere distinctio nostrum, quisquam Commodi ad doloremque deserunt minima hic. Error amet voluptatibus consequatur cumque veritatis corrupti, excepturi. Esse ipsa iusto minus nam rerum commodi? Eligendi laudantium soluta libero quo ut sed? Ratione maiores animi nihil voluptatibus blanditiis itaque, voluptas quaerat! Sed dolore molestias doloremque natus corporis. Sunt odit laudantium quia voluptas ut? Doloribus modi nihil similique consequuntur dignissimos! Provident sint voluptatum eaque nulla eligendi quis optio nobis recusandae Impedit provident libero labore neque consectetur officiis? Ipsum dicta inventore accusamus nihil asperiores! Suscipit velit labore voluptas delectus saepe animi quibusdam facere optio Eos sequi laudantium quidem quod cumque. Perferendis non nostrum sit
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>SEO</h2>
+                <p>
+                Our search engine optimizations strategy combines on-site optimizations and off-site initiatives, all in accordance with Google and other search engines best practices. We take the speculation out of SEO and rely on our tried and tested methods to generate ROI.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Social Media</h2>
+                <p>
+                Social media is the best way to engage with your customers. With the ability to join conversations or cultural events, social media marketing is one of the most powerful tools you can utilize to connect with your core audience and expand online presence to drive website visits, conversions and more. Our social media services include: community management, social listening, large-scale campaign implementations and micro/macro influencer integrations.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="images/web-development.png" alt="">
+              </div>
+              <div class="col-sm-10">
+                <h2>Digital Marketing Strategies</h2>
+                <p>
+                A digital strategy is a roadmap that lays out towards your business objectives.  It takes  components such as social media, SEO, content, email campaigns, branding, design and connect it into one cohesive and relevant plan. Reachpeak develop a digital strategies that gives you long-term results. Analytics is at the heart of our approach. 
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <section class="container web-des-sec-one visible-xs">
           <div class="row">
             <div class="col-sm-8 col-md-9">
-              <h2>Get a professional website at an affordable price.</h2>
+              <h2>Be Visible! Get More Website Traffic!</h2>
               <p>
-              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+              Just because you have new website doesn’t mean that anyone will notice it. You have to promote it. The best and prettiest website in the world is essentially useless if people cannot find it.  Only versatile digital marketing strategy will allows you to capture, engage and convert your target audience in real-time. 
               </p>
             </div>
             <div class="col-sm-4 col-md-3">
