--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,12 @@
     <section class="container contact-sec-one">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center">
-            Collaboratively administrate empowered markets via networks. <span>Dynamically</span> proctinate stalled fits.
-          </h2>
+          <h2 class="text-center"> Start a Project </h2>
+          <p class="text-center">
+          Thanks for your interest in working with us. 
+          We look forward to speaking with you about your  project. 
+          Please complete the details below and we’ll get back to you within an hours.
+          </p>
         </div>
       </div>
     </section>
