--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -196,7 +196,7 @@
                         </li>
                         <li class="active">
                             <div class="icon-svg2">
-                                <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <svg class="dig-mar-svg-sm"  version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                     <path d="M198 32h-72a10 10 0 0 0 0 20h72a10 10 0 0 0 0-20zM169 457c-2-2-4-3-7-3s-5 1-7 3a10 10 0 0 0 0 14c2 2 4 3 7 3s5-1 7-3a10 10 0 0 0 0-14z" />
                                     <path d="M448 318l-37-64a45 45 0 0 0-44-76l-37-64a10 10 0 0 0-16-1L199 259l-48 28a57 57 0 0 0 57 100l6-4 20 35H20V84h284v3a10 10 0 0 0 20 0V39c0-21-18-39-39-39H39C18 0 0 18 0 39v434c0 21 18 39 39 39h246c21 0 39-18 39-39V349l116-16a10 10 0 0 0 8-15zM20 39c0-10 9-19 19-19h246c10 0 19 9 19 19v25H20V39zm367 158c6 2 12 6 15 12 5 8 4 19-2 27l-23-40 10 1zM198 369a37 37 0 0 1-51-13c-10-18-4-41 14-52l41-23 38 65-42 23zm34 4l18-10 23 41-18 10-23-41zm72 100c0 10-9 19-19 19H39c-10 0-19-9-19-19v-35h284v35zm0-55h-15l3-2c5-3 6-9 3-14l-26-45 35-5v66zm-46-80l-40-70 73-93 84 147-117 16zm139-19l-93-161 16-21 103 178-26 4zM511 146c-3-5-9-6-14-4l-49 29a10 10 0 1 0 10 17l49-28c5-3 6-9 4-14zM420 102c-5-1-11 2-12 7l-7 27a10 10 0 1 0 19 5l7-27c2-5-2-10-7-12zM497 233l-28-7a10 10 0 1 0-5 19l27 7a10 10 0 1 0 6-19z" />
                                     <path d="M190 113H52a10 10 0 0 0 0 20h138a10 10 0 1 0 0-20zM197 164a10 10 0 0 0-17 7 10 10 0 0 0 10 10 10 10 0 0 0 10-10c0-2-1-5-3-7zM148 161H52a10 10 0 0 0 0 20h96a10 10 0 0 0 0-20zM166 209H90a10 10 0 0 0 0 20h76a10 10 0 0 0 0-20zM52 209a10 10 0 0 0 0 20 10 10 0 0 0 0-20z" />
